<resources>
    <string name="app_name">Animations</string>
    <string name="animation_drawable">AnimationDrawable</string>
    <string name="view_animations">View animations</string>
    <string name="scene_animations">Scene animations</string>
    <string name="object_animations">Object animations</string>
    <string name="layout_transitions">Layout transitions</string>
    <string name="custom_view_animations">Custom view animations</string>
    <string name="value_animations">Value animations</string>
    <string name="shared_element_animations">Shared element animations</string>
    <string name="transition_animations">Transition animations</string>
    <string name="progress_template">%d %%</string>
    <string name="click_to_start_animation">Click to start animation</string>
    <string name="swap_scenes">Swap scenes</string>
    <string name="shared_element_button">shared_element_button</string>
</resources>
